# senior_lovelive_benchmark

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/api/coverage/: route.ts
app/components/: CoverageExplorer.tsx
app/lib/: coverage.ts
data/processed/: group_song_index.json  handle_song_coverage_analysis.json  main_groups_event_setlist_matches.jsonl
data/raw/: llfans_all_setlists.jsonl
src/senior_lovelive_benchmark/: cli.py  export.py  http_client.py  matching.py  models.py  storage.py  text_utils.py
src/senior_lovelive_benchmark/sources/: __init__.py  eventernote.py  livefans.py  llfans.py  setlistfm.py
