[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senior-lovelive-benchmark"
version = "0.1.0"
description = "CLI crawler for collecting LoveLive event and setlist data."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
  "beautifulsoup4>=4.12.0",
  "eval-type-backport>=0.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "rapidfuzz>=3.9.0",
  "typer>=0.12.0",
]

[project.scripts]
lovelive-benchmark = "senior_lovelive_benchmark.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/senior_lovelive_benchmark"]
